--- a/databank/general_data/templates/general_data/services_templates/services_table.html
+++ b/databank/general_data/templates/general_data/services_templates/services_table.html
@@ -12,11 +12,11 @@
             <form class="row g-3" method="GET" action="services_table">
                 <div class="col-md-3">
                     <label for="year_min">Calender Date Minimum</label>
-                    <input type="date" class="form-control" id="year_min" name="year_min" />
+                    <input type="number" class="form-control" id="year_min" name="year_min" />
                 </div>
                 <div class="col-md-3">
                     <label for="year_max">Calender Date Maximum</label>
-                    <input type="date" class="form-control" id="year_max" name="year_max" />
+                    <input type="number" class="form-control" id="year_max" name="year_max" />
                 </div>
 
                 <div class="col-md-3">
