--- a/databank/general_data/templates/general_data/mining_templates/mining_table.html
+++ b/databank/general_data/templates/general_data/mining_templates/mining_table.html
@@ -57,7 +57,7 @@
             </select>
           </div>
           <div class="form-group col-md-3">
-            <label for="mine_code">Mine Code-Name of the mine </label>
+            <label for="mine_code">Mine Code </label>
             <select id="mine_code" class="form-control" name="mine_code">
               <option selected>--</option>
               {% for mine_code in mine_codes %}
@@ -121,7 +121,7 @@
               name="maximum_potential_stock"
               />
           </div>
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <label for="ViewMiningCompanyName">Mining Company Name</label>
             <input
               type="text"
@@ -130,7 +130,7 @@
               placeholder="e.g. company name"
               name="mining_company_name"
             />
-          </div>
+          </div> -->
           <div class="col-md-3 d-flex align-items-end">
             <button type="submit" class=" btn btn-primary">
               Search
