--- a/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
+++ b/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
@@ -17,7 +17,7 @@
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
     <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./public_unitillity_table">
+      <form class="row" method="GET" action="./public_utillity_table">
   
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
