--- a/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
+++ b/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
@@ -22,7 +22,7 @@
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -31,7 +31,7 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
