--- a/databank/general_data/templates/general_data/transport_templates/transport_table.html
+++ b/databank/general_data/templates/general_data/transport_templates/transport_table.html
@@ -21,7 +21,7 @@
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -30,7 +30,7 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
@@ -50,15 +50,15 @@
           </select>
         </div>
         <div class="form-group col-md-3">
-          <label for="transport_classification_code">Transpoort_Classification_Code</label>
+          <label for="transport_classification_code">Transport Classification Code</label>
           <select
             id="transport_classification_code"
             class="form-control"
             name="transport_classification_code"
           >
             <option selected>--</option>
-            {% for code in transport_classification_code %}
-            <option value="{{code.id}}">{{code.Code}} - {{code.Transport_Type}}</option>
+            {% for code in transport_classification_codes %}
+            <option value="{{code.id}}">{{code}}</option>
             {% endfor %}
           </select>
         </div>
