--- a/databank/general_data/templates/general_data/land_templates/land_table.html
+++ b/databank/general_data/templates/general_data/land_templates/land_table.html
@@ -21,7 +21,7 @@
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -30,7 +30,7 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
