fix filter by date

--- a/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
+++ b/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
@@ -22,11 +22,11 @@
 
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
-          <input type="date" class="form-control" id="date_minimum" name="date_min" />
+          <input type="number" class="form-control" id="date_minimum" name="date_min" />
         </div>
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
-          <input type="date" class="form-control" id="date_maximum" name="date_max" />
+          <input type="number" class="form-control" id="date_maximum" name="date_max" />
         </div>
 
 
