--- a/databank/general_data/templates/general_data/population_templates/population_table.html
+++ b/databank/general_data/templates/general_data/population_templates/population_table.html
@@ -23,7 +23,7 @@
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -32,7 +32,7 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
