fix trade data table

--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -27,7 +27,7 @@
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -36,7 +36,7 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
