--- a/databank/accounts/templates/accounts/register.html
+++ b/databank/accounts/templates/accounts/register.html
@@ -13,13 +13,13 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: #c1c1c1 !important;
 		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+			background: whitesmoke;
 			position: relative;
 			display: flex;
 			justify-content: center;
@@ -37,11 +37,11 @@
 		}
 
 		#form-title{
-			color: #fff;
+			color: #1a054e;
 		}
 		.login_btn {
 			width: 100%;
-			background: #33ccff !important;
+			background: #1a054e !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -52,7 +52,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #f7ba5b !important;
+			background: #1a054e !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
